# Shakhverdova_A_V_Kursovaya_5

./: hh_parser.py  main.py  pyproject.toml
classes/: db_manager.py  hh_parser.py
utils/: config.py  utils.py
